se añade tabla tecnologias

--- a/css/styles.css
+++ b/css/styles.css
@@ -13,26 +13,18 @@ header {
 }
 
 section {
-    padding: 2rem;
+	margin-left: 2rem;
+	margin-right: 2rem;
+	margin-top: 2rem;
 }
 
-.proyecto {
-    margin-bottom: 2rem;
-}
 
 img {
     max-width: 100%;
     height: auto;
+	
 }
 
-.descripcion {
-    display: none;
-    margin-top: 1rem;
-}
-
-p {
-	margin-bottom: 0rem;
-}
 
 footer {
     background-color: #333;
@@ -64,21 +56,56 @@ footer {
 	vertical-align: middle;
 }
 
-p {
-    margin-bottom: 0;
-}
 
 .container {
     display: flex;
     justify-content: space-between;
+	
 }
 
 .column {
-    flex-basis: 30%; /* Ajusta el tamaño de cada columna según sea necesario */
+    flex-basis: 25%; /* Ajusta el tamaño de cada columna según sea necesario */
     text-align: center;
+	
 }
 
 h2 {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
+
+
+table {
+    border-collapse: collapse;
+    width: 50%;
+	
+  }
+  
+  th, td {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+  }
+  
+  th {
+    background-color: #f2f2f2;
+  }
+  .container {
+            display: flex;
+            justify-content: center;
+            
+            text-align: center;
+            gap: 50px; /* Espacio entre columnas */
+        }
+
+    .column {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .column img {
+            max-width: 100%;
+            height: auto;
+            width:400px; /* Ajusta el tamaño según tu preferencia */
+        }
