--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: Arial, sans-serif;
     line-height: 1.6;
 	margin: 0;
+	
 }
 
 header, footer {
@@ -13,13 +14,15 @@ header, footer {
 }
 
 footer {
-    padding: 2rem 0;
-    bottom: 0;
+	margin-top: 20px;
     width: 100%;
 }
 
 section {
-    margin: 2rem;
+	padding-left: 2rem;
+    margin: auto;
+	max-width: 1800px;
+	
 }
 
 img {
@@ -118,4 +121,24 @@ th {
 }
 .columna-intereses {
 	width: 30%;
+}
+.container-foto {
+    display: flex;
+}
+.columna-foto {
+	flex: 1;
+	text-align: right;
+    justify-content: flex-end;
+}
+.columna-foto img {
+	margin-right: 30px;
+}
+li {
+	list-style-type: disc;
+	color: #333;
+	padding: 10px;
+}
+#conectamos {
+	font-size: 25px;
+	margin-top: 0;
 }
