--- a/css/styles.css
+++ b/css/styles.css
@@ -103,6 +103,21 @@ th {
     background-color: #f2f2f2;
 }
 
+.contenedor-tecnologias{
+	display: flex;
+}
+
+.columna-tecnologias{
+	display: flex;
+	flex: 1;
+}
+
+#contenido-variable{
+	border: 2px solid black;
+	width: 100%;
+	margin: 7%;
+}
+
 /* 4. Formación*/
 .formation-section {
     margin-left: 50px;
@@ -150,6 +165,8 @@ th {
 .columna-foto img {
 	margin-right: 30px;
 }
+
+/* 6. Actitudes */
 li {
 	list-style-type: disc;
 	color: #333;
