--- a/css/styles.css
+++ b/css/styles.css
@@ -105,6 +105,7 @@ th {
 
 .contenedor-tecnologias{
 	display: flex;
+	gap: 50px;
 }
 
 .columna-tecnologias{
@@ -113,7 +114,6 @@ th {
 }
 
 #contenido-variable{
-	border: 2px solid black;
 	width: 100%;
 	margin: 7%;
 }
